k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: europe-west1-docker.pkg.dev/alex-496108/mern-repo/mern-backend:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
